Reviewed by Eric.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=12290

Implement all SVGTextContentElement DOM methods.
This is the last missing SVG text feature. SVG fonts is next.

Added testcase: svg/custom/text-dom-01-f.svg (tests all new methods)


Canonical link: https://commits.webkit.org/21768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27848 268f45cc-cd09-0410-ab3c-d52691b4dbfc